--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@ function generateLucky(){
   const colors=[{v:"ローズピンク",hex:"#E8627C",reason:"恋愛運UP。リップに使って"},{v:"ラベンダー",hex:"#B08ACF",reason:"直感力UP。大事な判断がある日に"},{v:"シャンパンゴールド",hex:"#D4A853",reason:"金運の色。お財布やアクセに"},{v:"ベビーブルー",hex:"#6BA3BE",reason:"コミュ力UP。人と話す日に"},{v:"コーラル",hex:"#E07070",reason:"行動力の色。チークに仕込んで"}];
   const items=[{v:"リップ",reason:"言葉に力が宿る日",e:"💋"},{v:"香水",reason:"嗅覚から運気UP",e:"🌸"},{v:"ミラー",reason:"自分を見つめ直すと気づき",e:"🪞"},{v:"ネイルオイル",reason:"指先ケアが開運のコツ",e:"💅"}];
   const nums=[{v:"7",reason:"直感が冴える数字"},{v:"11",reason:"11:11に願い事してみて"},{v:"22",reason:"夢を叶えるナンバー"},{v:"33",reason:"愛と癒しの数字"}];
-  const matchType=pick(DREAM_TYPES);
-  const matchHints=["今日はこのタイプの人と気が合いそう","このタイプの人との距離が縮まる日","意外な共通点が見つかるかも","このタイプの人があなたのキーパーソン"];
-  return{color:pick(colors),item:pick(items),num:pick(nums),matchType,matchHint:pick(matchHints)};
+  return{color:pick(colors),item:pick(items),num:pick(nums)};
 }
 
 function generateFortune(name,sign,gender){
@@ -167,10 +165,35 @@ function analyzeDream(text,userSign){
   const readingIntro="あなたは今、"+readingLines[0];
   const readingDeep=readingLines[1]||"";
   const views={
-    spiritual:{label:"スピ",title:"宇宙からのメッセージ",good:hasAnx?"エネルギーが入れ替わる直前。一番暗い時が夜明け前。今週中に流れが変わる兆し。":hasLove?"恋愛の波動が高まってる。ふとした瞬間の直感が当たりやすい時期。":hasFree?"魂が次のステージを感知してる。「気になる」は宇宙からのGOサイン。":"潜在意識が整理モード。ふと浮かんだ直感、今日は特に信じていい。",watch:hasAnx?"エネルギーが敏感な時期。ネガティブな人や場所は今週は避けて。":"人の言葉に影響されやすい期間。SNSの情報は距離を置いて受け取って。"},
-    psychology:{label:"心理",title:"深層心理のメッセージ",good:hasWork?"承認欲求が高まってるけど、まず自分で自分を認めることが先。":hasLove?"相手への気持ちの奥に、自分への問いが隠れてる。":hasAnx?"不安の正体は「変化」への抵抗。変わりたいのに変わるのが怖い、それが今のあなた。":"心が現状の「ズレ」を感知してる。その違和感、たぶん合ってる。",watch:hasWork?"完璧主義モードに入ってない？80点で出す勇気が今は必要。":"感情を頭で処理しすぎてる。今日はノートに気持ちを書き出してみて。"},
-    love:{label:"恋愛",title:"対人関係のヒント",good:hasLove?"恋愛パターンの見直し時期。いつも同じタイプを好きになってない？":hasAnx?"人間関係で我慢しすぎてる。嫌われるのが怖くて自分を殺してるなら、もう限界のサイン。":"対人関係の質が変わるタイミング。広く浅くから、狭く深くへ。",watch:hasLove?"好きと執着を見分けて。相手のSNSを無意識にチェックしてない？":"距離感の見直し期間。近すぎる人からは少し離れて。"},
-    eastern:{label:"東洋",title:"運気の流れ",good:hasAnx?"陰の極み＝転換点。今月中に断捨離すると流れが変わる。":hasFree?"移動運◎。新しい場所に行くと運命のヒントが見つかる。":"気の流れが変わる時期。3日以内の「偶然」に注目。",watch:hasAnx?"水回りの掃除で即効運気UP。今日中にできる。":"午前中に大事な判断を。午後は気が乱れやすい。"}
+    spiritual:{label:"スピ",title:"エネルギーリーディング",
+      good:hasAnx?"第3チャクラ（みぞおち）が弱ってるサイン。自己肯定感とパワーを司る場所。黄色いものを身につけるか、朝日を浴びて。太陽のエネルギーが直接補充してくれる。"
+        :hasLove?"ハートチャクラが活性化してる。人を惹きつけるオーラが出てるけど、同時にエネルギーを吸い取られやすい時期。ローズクォーツか、ピンクのものをそばに置いて。"
+        :hasFree?"クラウンチャクラが開き始めてる。高次の自分と繋がろうとしてるサイン。瞑想や深呼吸が普段の3倍効く時期。5分でいいから目を閉じて。"
+        :"オーラの色が変わりかけてる転換期。エネルギーフィールドが不安定だから、パワーストーンや自然に触れると一気に整う。今日は土や緑に触れる時間を作って。",
+      watch:hasAnx?"エンパス体質が強まってる。他人の感情を自分のものだと勘違いしやすい。「これは私の感情？」と問いかけるだけで、余計なエネルギーが剥がれる。"
+        :hasLove?"相手のエネルギーと自分のエネルギーが混ざり合いやすい時期。寝る前に「自分のエネルギーだけを残す」とイメージして。エネルギーコードを意識的に切って。"
+        :"左肩が重く感じたら、邪気が溜まってるサイン。粗塩を入れたお風呂に浸かるか、深呼吸しながら手を振り払うイメージで。"},
+    psychology:{label:"心理",title:"認知パターン分析",
+      good:hasWork?"「べき思考」が強くなってる。「〜すべき」「〜じゃなきゃ」で自分を追い込んでない？認知行動療法的に言うと、これは自動思考のワナ。「〜したい」に言い換えるだけで心が軽くなる。"
+        :hasLove?"投影が起きてる。相手に感じてる魅力は、実はあなた自身が抑圧してる資質。「この人のどこが好き？」を書き出してみて。それ全部、あなたの中にもある。"
+        :hasAnx?"カタストロフィ化（最悪の事態を想像する癖）が出てる。「最悪こうなったら？」→「実際にそうなる確率は？」→「なったとしても対処できる？」の3段階で考えて。97%は杞憂だから。"
+        :"認知的不協和が起きてる。今やってることと本当にやりたいことのズレに脳が警告を出してる。「本当はどうしたい？」を紙に書くだけで、無意識が答えを教えてくれる。",
+      watch:hasWork?"インポスター症候群の兆候あり。「私なんかが」「たまたまうまくいっただけ」——それ、歪んだ自己認知。事実ベースで自分の実績をリスト化してみて。"
+        :hasLove?"確証バイアスに注意。「嫌われてるかも」と思うと、それを裏付ける証拠ばかり集めちゃう。反証を意識的に探して。相手が笑ってくれた瞬間、思い出せる？"
+        :"反芻思考（同じことをグルグル考える）に入りかけてる。思考のループを断つには、体を動かすのが一番。5分の散歩か、冷たい水で手を洗うだけで脳がリセットされる。"},
+    love:{label:"恋愛",title:"アタッチメント診断",
+      good:hasLove?"あなたの恋愛の癖は「相手の出方を待つ → 不安になる → 確認行動に走る」のパターンじゃない？これは不安型アタッチメントの特徴。安定型に近づくには「相手の行動＝相手の気持ち」と決めつけないこと。"
+        :hasAnx?"人間関係で消耗してるのは、境界線（バウンダリー）が曖昧だから。相手の問題を自分の問題にしてない？「それは私の責任？」と自問するだけで、背負わなくていい荷物が見える。"
+        :"今のあなたに必要なのは「新しい出会い」より「既存の関係のメンテナンス」。最後に連絡した日が1ヶ月以上前の大切な人、いない？関係は放置すると腐る。今日1通送るだけでいい。",
+      watch:hasLove?"「連絡頻度＝愛情の深さ」と無意識に思ってない？それは愛着スタイルの偏り。返信が遅い＝冷めたわけじゃない。相手にも相手のリズムがある。"
+        :"コミュニケーションで「察してほしい」はNG。特に大事なことほど言語化して伝えて。「言わなくても分かるでしょ」は甘え。言葉にすることが、信頼の第一歩。"},
+    eastern:{label:"東洋",title:"五行×暦の運勢",
+      good:hasAnx?(()=>{const e=["木（もく）のエネルギーが不足。成長や発展の気が弱まってて停滞感がある。緑色の食べ物（ほうれん草、ブロッコリー）を意識的に取って。東の方角にある窓を開けるのも◎。","水（すい）の気が過剰。感情が溢れやすい状態。塩（天然塩）をひとつまみ舐めるか、土のエネルギーで相殺。黄色やベージュのものを身につけて安定させて。"];return e[new Date().getDate()%2]})()
+        :hasFree?(()=>{const e=["風水的に移動運が強い時期。吉方位は"+["北","北東","東","南東","南","南西","西","北西"][new Date().getDate()%8]+"。この方角に小旅行するとご縁が動く。","九星気学で「変化」の星が巡ってる。新しい環境に飛び込むなら今月中がベスト。ただし準備は怠らないで。"];return e[new Date().getDate()%2]})()
+        :(()=>{const e=["今日は暦で「友引」の気が流れてる日。人と会うと運気が伝染する。特に午後の約束が吉。","陰陽のバランスが崩れかけてる。朝に陽の行動（運動・掃除・外出）、夜に陰の行動（読書・瞑想・入浴）を意識すると整う。"];return e[new Date().getDate()%2]})(),
+      watch:hasAnx?"気の滞りが体の右側に出やすい時期。右肩こりや右の頭痛があったら風水的にも要注意。部屋の南西を整理して。物が溜まってると「坤（こん）」の気が詰まる。"
+        :hasFree?"移動したい気持ちは正しいけど、「土用」の期間（季節の変わり目の18日間）に大きな引越しや転職は避けて。今は動くための「準備」に最適な期間。"
+        :"今月の干支の流れ的に、午前中（特に9〜11時）が最もエネルギーが高い。大事な判断や新しい挑戦はこの時間帯に。午後3時以降は省エネモードで。"}
   };
   const actShould=hasAnx?["今日中に5分だけ深呼吸する","信頼できる人に1通LINEする","22時にスマホの電源を切る"]:hasLove?["その人のSNSを24時間見ない","「一人でも幸せか」を自問する","自分のために1つ贅沢する"]:hasWork?["タスクを3つに絞る","30分だけ散歩する","「できない」を1回言う"]:["夢をすぐメモする","直感で動く場面を1つ作る","いつもと違う選択を1つする"];
   const actAware=hasLove?["同じタイプを好きになってないか","その関係で自分らしくいられてるか","相手に求めてるのは自分に足りないものじゃないか"]:["今日会う人の中の「気になる人」に注目","体の違和感はストレスのサイン","ゾロ目を見たらその時の感情を覚えておく"];
@@ -208,20 +231,6 @@ function LuckySection({lucky,className=""}){
         <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.7}}>{item.reason}</p>
       </div>
     </Card>)}
-    {lucky.matchType&&<Card style={{marginTop:4,background:"linear-gradient(135deg,rgba(232,98,124,0.05),rgba(176,138,207,0.05))"}}>
-      <div style={{display:"flex",alignItems:"center",gap:10,marginBottom:12}}>
-        <span style={{fontSize:18}}>💫</span>
-        <p style={{fontSize:9,color:"var(--t4)",letterSpacing:2,textTransform:"uppercase",fontFamily:"Cormorant, serif"}}>today's match type</p>
-      </div>
-      <div style={{display:"flex",alignItems:"center",gap:14}}>
-        <CharaAvatar id={lucky.matchType.id} size={56}/>
-        <div>
-          <p style={{fontSize:15,fontWeight:700,color:"var(--t1)"}}>{lucky.matchType.name}</p>
-          <p style={{fontSize:11,color:"var(--t3)",marginTop:2}}>{lucky.matchType.sub}</p>
-          <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.8,marginTop:6}}>{lucky.matchHint}</p>
-        </div>
-      </div>
-    </Card>}
   </div>;
 }
 
